Retirando la libreria nesbot/carbon

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,6 @@
     },
     "minimum-stability": "stable",
     "require": {
-        "php": "^8.2",
-         "nesbot/carbon": "^3.10"
+        "php": "^8.2"
     }
 }
